--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8077,6 +8077,20 @@ footer .ft-bottom .link-gray:hover {
           order: 2;
   -webkit-transition-delay: 0.2s;
           transition-delay: 0.2s;
+  max-height: 600px;
+  overflow-y: auto;
+}
+
+.pd-section .content .pdData.noscrollbar {
+  max-height: 100%;
+}
+
+.pd-section .content .pdData.noscrollbar .mCSB_container {
+  padding-top: 0;
+}
+
+.pd-section .content .pdData .mCSB_container {
+  padding-top: 0;
 }
 
 .pd-section .content .pdData .sublabel {
@@ -8515,6 +8529,10 @@ footer .ft-bottom .link-gray:hover {
     max-width: 800px;
     margin: 0 auto;
     padding-top: 35px;
+    max-height: 100%;
+  }
+  .pd-section .content .pdData .mCSB_container {
+    padding-top: 0;
   }
   .pd-section .content .pdData .pdtext, .pd-section .content .pdData .ul-style, .pd-section .content .pdData .detail {
     padding-right: 0;
